Changes from jTDS 0.8-rc1
=========================

04/21/2004 - Brian Heineman
 o Corrected bug [938632] String index out of bounds error in 0.8rc1;
   added test to ensure functionality continues to work in the future.
 o Corrected bug [938494] setObject(i, o, NUMERIC/DECIMAL) cuts off decimal
   places; added test to ensure functionality continues to work in the future.

04/20/2004 - Brian Heineman
 o Updated DatabaseMetaData.supportsNamedParameters() to return true.

04/19/2004 - Brian Heineman
 o Implemented CallableStatement.getMetaData() and
   PreparedStatement.getMetaData(); both implementations are currently
   sub-optimal due to the fact they are executing the query to obtain the
   ResultSetMetaData.
 o Corrected PreparedStatement caching bug related to changing catalogs.

04/16/2004 - Brian Heineman
 o Corrected bug [934273] setNull does not set IMAGE type to null; added tests
   to ensure functionality continues to work in the future.
 o Corrected NullPointerExceptions thrown from ResultSet.updateBinaryStream(),
   ResultSet.updateBlob(), ResultSet.updateAsciiStream(),
   ResultSet.updateCharacterStream() and ResultSet.updateClob() if a null value
   was passed in.
 o Improved LOBTest performance; runs in ~1 second now instead of 60+.
 o Minor optimizations for sending character data.
 o Improved exception handling throughout the driver to provide the complete
   stack trace of any nested exception.
 o Applied part of patch [934396] better IO error handling; thanks to Fedor
   Karpelevitch.

04/14/2004 - Alin Sinpalean
 o Applied and improved patch #930076 - Passing parameters to stored procedure
   by name. Thanks Tommy Sandstrom for the original patch.

04/12/2004 - Brian Heineman
 o Corrected bug preventing connections to databases with spaces in the name.
 o Added check to commit() and rollback() to determine if connection is closed
   to fix bug [931090] ArrayIndexOutOfBoundsException in rollback()